# iadmin-service/router/sys_casbin.go
@@ -1,0 +1,15 @@
+package router
+
+import (
+	v1 "ginProject/api/v1"
+	"ginProject/middleware"
+	"github.com/gin-gonic/gin"
+)
+
+func InitCasbinRouter(Router *gin.RouterGroup) {
+	CasbinRouter := Router.Group("casbin").Use(middleware.OperationRecord())
+	{
+		CasbinRouter.POST("updateCasbin", v1.UpdateCasbin)
+		CasbinRouter.POST("getPolicyPathByRoleId", v1.GetPolicyPathByRoleId)
+	}
+}
