# iadmin-service/router/sys_role.go
@@ -6,15 +6,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func InitSysRoleRouter(Router *gin.RouterGroup) (R gin.IRoutes)  {
+func InitSysRoleRouter(Router *gin.RouterGroup) (R gin.IRoutes) {
 	RoleRouter := Router.Group("sysRole")
 	{
-		RoleRouter.GET("getSysRoleList",v1.GetSysRoleList)
-		RoleRouter.Use(middleware.OperationRecord()).PUT("updateSysRoleInfo",v1.UpdateSysRoleInfo)
-		RoleRouter.Use(middleware.OperationRecord()).POST("addSysRoleInfo",v1.AddSysRoleInfo)
-		RoleRouter.Use(middleware.OperationRecord()).DELETE("deleteBatchSysRole",v1.DeleteBatchSysRole)
-		RoleRouter.Use(middleware.OperationRecord()).PUT("updateSysRoleMenuConfig",v1.UpdateSysRoleMenuConfig)
-		RoleRouter.Use(middleware.OperationRecord()).Use(middleware.OperationRecord()).PUT("updateSysRoleApiConfig",v1.UpdateSysRoleApiConfig)
+		RoleRouter.GET("getSysRoleList", v1.GetSysRoleList)
+		RoleRouter.Use(middleware.OperationRecord()).PUT("updateSysRoleInfo", v1.UpdateSysRoleInfo)
+		RoleRouter.Use(middleware.OperationRecord()).POST("addSysRoleInfo", v1.AddSysRoleInfo)
+		RoleRouter.Use(middleware.OperationRecord()).DELETE("deleteBatchSysRole", v1.DeleteBatchSysRole)
+		RoleRouter.Use(middleware.OperationRecord()).PUT("updateSysRoleMenuConfig", v1.UpdateSysRoleMenuConfig)
+		RoleRouter.Use(middleware.OperationRecord()).PUT("setRoleDefaultRouter", v1.SetRoleDefaultRouter)
 	}
 	return RoleRouter
 }
